# dbt_cicd

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dbt_cd.yml  dbt_ci.yml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/marts/: orders_per_customer.sql
dbt_project/models/staging/: schema.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql
